[tool.poetry]
name = "python-poetry-migration"
version = "1.0"
description = ""
authors = ["Eyal Abbas <eyal.abbas@retrain.ai>"]
readme = "README.md"
packages = [{include = "python_poetry_migration"}]

[tool.poetry.dependencies]
python = "^3.10"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
